syntax = "proto3";

package signal;

service MatService{
  rpc readMat(MatRequest) returns (MatResponse) {}
}

message MatRequest{
  bytes file_content = 1;
  string field =2;

}

message MatResponse{
  repeated Vector matrix  = 1;
}

message Vector{
  repeated float numbers  = 1;
}
